en la barra de navegacion se añadio el incono y el audio de alicia, ademas de su interacion en un documento javascript controls_audio que permite pausar y dar play

--- a/src/estilo-footer.css
+++ b/src/estilo-footer.css
@@ -54,6 +54,19 @@
     background-color: rgb(1, 2, 4);
     text-align: center;
     min-height: 3rem;
-    padding-top: 1rem;
+    padding: 1rem 0;
+    color: rgb(255, 180, 180);
+}
+footer figure{
+    filter: invert(1);
+    
+}
+
+.footer a:link{
+    text-decoration: none;
+    color: rgb(255, 180, 180);
+}
+
+.footer a:visited{
     color: rgb(255, 180, 180);
 }
