--- a/src/estilos-nav.css
+++ b/src/estilos-nav.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image: url(./imagenes/alice.jpg);
+    background-image: url(./images/alice.jpg);
     background-repeat: no-repeat;
 }
 
@@ -20,19 +20,32 @@ body{
     align-items: center;
 }
 
+/*parte izquierda del nav*/
+.header-nav-left{
+    display: flex;
+    align-items: center;
+}
+
 .nav-container-logo{
     width: 5rem;
     height: 2.8rem;
-    font-size: 1rem;
     overflow: hidden;
     margin: 0.6rem 0.6rem 0;
 }
-.nav-container-logo img{
+.nav-container-song{
+    width: 1.8rem;
+    height: 1.8rem;
+    overflow: hidden;
+    margin-left: 1rem;
+}
+
+.nav-container-logo img, .nav-container-song img{
     width: 100%;
     height: 100%;
     filter: invert(1);
 }
 
+/*listado de la parte derecha del nav*/
 .nav-list{
     width: 30%;
     display: flex;
