--- a/src/estilo-footer.css
+++ b/src/estilo-footer.css
@@ -24,28 +24,44 @@
     }
 }
 
+
+
 /*imagen Flotante*/
 
 .container-flotante{
     position: fixed;
-    width: 25vw;
+    width: 27vw;
     height: 50vh;
-    overflow: hidden;
     display: flex;
     top: 25vh;
     justify-content: center;
+    border-radius: 0.3rem 0 0.3rem;
+    padding: 1rem;
+    background-color: rgba(1, 2, 4,0.3);
 }
 
 .container-flotante img{
     width: auto;
     height: 100%;
 }
-.container-flotante button{
-    height: 40px;
-    width: 40px;
-    top: 0;
-    right: 0;
+
+.container_btn_close{
+    background-color: rgba(1, 2, 4,0.3);
+    padding: 0.5rem;
     position: absolute;
+    top: -4rem;
+    right: 0; 
+    border-radius: 100% 100% 0 0;
+}
+
+.container-flotante button{
+    height: 3rem;
+    width: 3rem;   
+    border-radius: 100%;
+    cursor: pointer;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgba(193, 30, 49,0.8);
 }
 
 /*footer*/
@@ -53,6 +69,7 @@
 .footer{
     background-color: rgb(1, 2, 4);
     text-align: center;
+    bottom: 0;
     min-height: 3rem;
     padding: 1rem 0;
     color: rgb(255, 180, 180);
