--- a/src/styles/estilos-nav.css
+++ b/src/styles/estilos-nav.css
@@ -1,52 +1,84 @@
 
 
 .header-nav{
-    background-color: rgba(28, 16, 20, 0.6);
-    display: flex;
-    top: 0;
-    justify-content: space-between;
-    min-height: 1rem;
-    padding-bottom: 0.5rem;
+    background-color: var(--transparent-brown);
+    padding: 0.6rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
 }
 
-/*parte izquierda del nav*/
-.header-nav-left{
-    display: flex;
-    align-items: center;
-}
+/*parte arriba del nav*/
 
-.nav-container-logo{
-    width: 5rem;
-    height: 2.8rem;
-    overflow: hidden;
-    margin: 0.6rem 0.6rem 0;
-}
-.nav-container-song{
-    width: 1.8rem;
-    height: 1.8rem;
-    overflow: hidden;
-    margin-left: 1rem;
-}
-
-.nav-container-logo img, .nav-container-song img{
+.header-nav--up{
     width: 100%;
-    height: 100%;
+    display: contents;
+    align-items: center;
+}
+
+.nav-container-icon--blanco{
     filter: invert(1);
 }
 
+.nav-container-icon__logo{
+    width: 6.5rem;
+    height: 3.8rem;
+    background-image: url(../assets/images/imgs/Alice_in_Wonderland.svg);
+    background-repeat:no-repeat;
+    background-size: contain;
+}
+
+.nav-container-icon__song{
+    width: 1.5rem;
+    height: 1.5rem;
+    background-image: url(../assets/images/icons/sonido.png);
+    background-repeat:no-repeat;
+    background-size: contain;
+}
+
+
+/*las barras*/
+
+.nav__checked-burguer-container{
+    justify-self: end;
+}
+
+.nav__checked-burguer{
+    display: none;
+    justify-self: center;
+}
+
+.icon-hamburguesa{
+    width: 1.5rem;
+    height: 1.5rem;
+    background-image: url(../assets/images/icons/lines.svg);
+    background-size: contain;
+    justify-self: end;
+    cursor: pointer;
+}
+
 /*listado de la parte derecha del nav*/
-.nav-list{
-    width: 30%;
-    display: flex;
+
+.header-nav--down{
+    margin-top: 5px;
+    grid-column: 1 / 4;
+    justify-self: center;
+}
+
+.header-nav--right-list{
+    justify-self: center;
+    text-align: center;
+}
+
+
+.header-nav--right-list li{
     list-style: none;
-    color: white;
-    justify-content: space-between;
-    margin-right: 4%;
+    padding: 0.2rem;
 }
 
-.nav-list li a{
+.header-nav--right-list li a{
+    font-family: 'Alice_wonder';
+    font-size: x-large;
     text-decoration: none;
-    color: white;
+    color: #ffffff;
 }
-
