--- a/src/styles/estilo-flotans_footer.css
+++ b/src/styles/estilo-flotans_footer.css
@@ -1,17 +1,21 @@
+
 .contenido-central-button{
-    width: 7rem;
-    height: 7rem;
-    border-radius: 50%;
-    bottom: 2.5rem;
     position: fixed;
+    width: 5rem;
+    height: 5rem;
+    right: 1rem;
+    bottom: 2rem;
+    z-index: 20;
+    border-radius: 50%;
     background-color: rgba(193, 30, 49,0.8);
     color: rgb(255, 255, 255);
     border: none;
     cursor: pointer;
-    right: 1rem;
     font-weight: bold;
+    font-size: small;
     animation: traslator 1.6s alternate;
 }
+
 
 .contenido-central-button:active{
     background-color: rgba(255, 43, 68, 0.8);
@@ -28,21 +32,26 @@
 
 /*imagen Flotante*/
 
+
 .container-flotante{
     position: fixed;
-    width: 27vw;
+    width: 70vw;
     height: 50vh;
-    display: flex;
-    top: 25vh;
-    justify-content: center;
-    border-radius: 0.3rem 0 0.3rem;
     padding: 1rem;
+    top: 25vh;
+    left: calc(50% - 70vw / 2);
+    border-radius: 0.3rem 0 0.3rem;
     background-color: rgba(1, 2, 4,0.3);
+    display: flex;
+    justify-content: center;
 }
 
 .container-flotante img{
+    object-fit: contain;
     width: auto;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
 }
 
 .container_btn_close{
@@ -65,6 +74,7 @@
 }
 
 /*footer*/
+
 
 .footer{
     background-color: rgb(1, 2, 4);
