--- a/src/styles/estilos_global.css
+++ b/src/styles/estilos_global.css
@@ -3,11 +3,14 @@
     src: url('../fonts/Alice_in_Wonderland_3.ttf') format('truetype');
     font-style: normal;
     font-weight: bold;
+    font-display: swap;
   }
 
 :root{
     --rojiso: #f03939;
     --morado: #580826;
+    --beich: #f2e6cc;
+    --azul-dark: #291a44;
     --transparent-brown: rgba(28, 16, 20, 0.6);
 }
 
@@ -18,8 +21,8 @@
 }
 
 body{
-    background-image: url(https://i.pinimg.com/564x/db/86/ea/db86ea9057a3aefc58c58c4315ca1978.jpg);
-    background-color: var(--rojiso);
+    /*background-image: url(../assets/images/imgs/paper.jpg);*/
+    background-color: var(--azul-dark);
     background-attachment: fixed;
 }
 
