--- a/src/styles/estilo-flotans_footer.css
+++ b/src/styles/estilo-flotans_footer.css
@@ -11,9 +11,11 @@
     color: rgb(255, 255, 255);
     border: none;
     cursor: pointer;
+    font-family: 'Alice_wonder', sans-serif;
     font-weight: bold;
     font-size: small;
     animation: traslator 1.6s alternate;
+    transition: all 1s;
 }
 
 
@@ -77,11 +79,12 @@
 
 
 .footer{
-    background-color: rgb(1, 2, 4);
-    text-align: center;
-    bottom: 0;
     min-height: 3rem;
+    bottom: 0;
     padding: 1rem 0;
+    background-color: rgb(1, 2, 4);
+    font-size: 1rem;
+    text-align: center;
     color: rgb(255, 180, 180);
 }
 footer figure{
